@@ -7,6 +7,8 @@ git-annex (5.20150825) UNRELEASED; urgency=medium
     --unused-refspec option. Thanks, Øyvind A. Holm.
   * Make full option parsing be done when not in a git repo, so --help
     can be displayed for commands that require a git repo, etc.
+  * fsck: Work around bug in persistent that broke display of
+    problematically encoded filenames on stderr when using --incremental.
 
  -- Joey Hess <id@joeyh.name>  Tue, 01 Sep 2015 14:46:18 -0700
 
